# obs-browser-standalone

./: CMakeLists.txt  README.md  fetch_helpers.sh
cmake/: ObsDefaults_Linux.cmake  ObsHelpers.cmake  ObsHelpers_macOS.cmake  fetch_helpers.sh
cmake/helpers/: ObsDefaults.cmake  ObsHelpers.cmake  ObsHelpersFunctions.cmake  ObsHelpersLinux.cmake
